feat(update): audit service and tools