@@ -9,12 +9,10 @@ import org.keycloak.representations.idm.GroupRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClientResponseException;
-import reactor.core.publisher.Mono;
 
-import javax.ws.rs.core.Response;
-import java.nio.charset.StandardCharsets;
+import jakarta.ws.rs.core.Response;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -27,72 +25,73 @@ public class KeycloakUserService {
         this.realmResource = keycloak.realm(keycloak.realms().findAll().get(0).getRealm());
     }
 
-    public Mono<UserRepresentation> getUser(String id) {
+    public Optional<UserRepresentation> getUser(String id) {
         try {
             UserResource userResource = realmResource.users().get(id);
             UserRepresentation userRepresentation = userResource.toRepresentation();
             userRepresentation.setGroups(userResource.groups().stream().map(GroupRepresentation::getName).collect(Collectors.toList()));
-            return Mono.just(userRepresentation);
+            return Optional.of(userRepresentation);
         } catch (Exception e) {
             log.error("Failed to get user from keycloak with exception!", e);
-            return Mono.empty();
+            return Optional.empty();
         }
     }
 
-    public Mono<UserRepresentation> searchUser(String username) {
+    public Optional<UserRepresentation> searchUser(String username) {
         try {
             UserRepresentation userRepresentation = realmResource.users().search(username).get(0);
             UserResource userResource = realmResource.users().get(userRepresentation.getId());
             userRepresentation.setGroups(userResource.groups().stream().map(GroupRepresentation::getName).collect(Collectors.toList()));
-            return Mono.just(userRepresentation);
+            return Optional.of(userRepresentation);
         } catch (Exception e) {
             log.error("Failed to search user from keycloak with exception!", e);
-            return Mono.error(e);
+            return Optional.empty();
         }
     }
 
-    public Mono<Response> createUser(UserRepresentation userRepresentation) {
+    public Optional<Response> createUser(UserRepresentation userRepresentation) {
         try {
             Response response = realmResource.users().create(userRepresentation);
             if (HttpStatus.valueOf(response.getStatus()).is2xxSuccessful()) {
-                return searchUser(userRepresentation.getUsername()).flatMap(userRepresentation1 ->
-                        resetPassword(userRepresentation1.getId()).flatMap(aBoolean -> Mono.just(response)));
+                var userRepresentation1 = searchUser(userRepresentation.getUsername());
+                resetPassword(userRepresentation1.orElseThrow().getId());
+                return Optional.of(response);
             }
-                throw new WebClientResponseException(response.getStatus(), response.getStatusInfo().getReasonPhrase(),
-                        null, response.readEntity(String.class).getBytes(), StandardCharsets.UTF_8);
+            return Optional.empty();
         } catch (Exception e) {
             log.error("Failed to create user in keycloak with exception!", e);
-            return Mono.just(Response.status(Response.Status.BAD_REQUEST).entity(e.getMessage()).build());
+            return Optional.of(Response.status(Response.Status.BAD_REQUEST).entity(e.getMessage()).build());
         }
     }
 
-    public Mono<Response> updateUser(String id, UserRepresentation userRepresentation) {
+    public Optional<Response> updateUser(String id, UserRepresentation userRepresentation) {
         try {
             UserResource userResource = realmResource.users().get(id);
             userResource.update(userRepresentation);
             userResource.groups().forEach(groupRepresentation -> userResource.leaveGroup(groupRepresentation.getId()));
             userRepresentation.getGroups().stream()
-                    .map(group -> realmResource.groups().groups(group, 0, 1).get(0).getId())
+                    .map(group -> realmResource.groups().groups(group, 0, 1).getFirst().getId())
                     .forEach(userResource::joinGroup);
-            return getUser(id).flatMap(userRepresentation1 -> Mono.just(Response.ok(userRepresentation1).build()));
+            var user = getUser(id);
+            return Optional.of(Response.ok(user).build());
         } catch (Exception e) {
             log.error("Failed to update user in keycloak with exception!");
-            return Mono.just(Response.status(Response.Status.BAD_REQUEST).entity("User with these data already exists!").build());
+            return Optional.of(Response.status(Response.Status.BAD_REQUEST).entity("User with these data already exists!").build());
         }
     }
 
-    public Mono<Boolean> resetPassword(String id) {
+    public Boolean resetPassword(String id) {
         try {
             UserResource userResource = realmResource.users().get(id);
             userResource.executeActionsEmail("ui-client", "http://localhost:8080/", List.of("UPDATE_PASSWORD"));
-            return Mono.just(true);
+            return true;
         } catch (Exception e) {
             log.error("Failed to reset password for user in keycloak with exception!", e);
-            return Mono.just(false);
+            return false;
         }
     }
 
-    public Mono<Boolean> changePassword(String id, String newPassword) {
+    public Boolean changePassword(String id, String newPassword) {
         try {
             UserResource userResource = realmResource.users().get(id);
             CredentialRepresentation credentialRepresentation = new CredentialRepresentation();
@@ -100,21 +99,21 @@ public class KeycloakUserService {
             credentialRepresentation.setTemporary(false);
             credentialRepresentation.setValue(newPassword);
             userResource.resetPassword(credentialRepresentation);
-            return Mono.just(true);
+            return true;
         } catch (Exception e) {
             log.error("Failed to reset password for user in keycloak with exception!", e);
-            return Mono.just(false);
+            return false;
         }
     }
 
-    public Mono<Boolean> deleteUser(String id) {
+    public Boolean deleteUser(String id) {
         try {
             UserResource userResource = realmResource.users().get(id);
             userResource.remove();
-            return Mono.just(true);
+            return true;
         } catch (Exception e) {
             log.error("Failed to delete user in keycloak with exception!", e);
-            return Mono.just(false);
+            return false;
         }
     }
 
